Reference to the Dissertation project
Reference to the Propensity to Purchase Project

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 	<head>Axenderst's Portfolio</head>
 	<body>
-		<h1>Hello World</h1>
-		<p>I'm hosted with GitHub Pages.</p>
+		<a href="\dissertation\index.html">Propensity to Purchase Project</a>
 	</body>
 </html>
