--- a/dissertation/analysis.html
+++ b/dissertation/analysis.html
@@ -40,7 +40,7 @@
 				</br>During the Data Understanding phase, we will execute an initial assessment of the provided data, 
 				analysing each of the attributes and how they will contribute to get a more accurate result on the analysis. 
 				</br></br>To consult what have been done during the execution of the data understanding, go to the following
-				<a href="..\Presentation\Notebooks\Data Understanding\understanding.html">link</a></br>
+				<a href="..\Notebooks\Data Understanding\understanding.html">link</a></br>
 			</p>
 		
 		
@@ -54,7 +54,7 @@
 					<li><b>Merging the data.-</b> As we use two different datasets, we have to merge both of them, this is done in order to obtain a single dataset of the form <i>[m x n] </i>					
 				</ul> 
 					To consult what have been done during the exection of the data preparation, go to the following 
-					<a href="..\Presentation\Notebooks\Data Preparation\preparation.html">link</a></br>
+					<a href="..\Notebooks\Data Preparation\preparation.html">link</a></br>
 					</br><b>Data Collection Report (Deliverable):</b> The data collection report contains the description of the data, a record of the data exploration and the 
 					final data quality report, describing everything that was done to the data during the Data Understanding and Data Preparation phases, this in 
 					compliance to the specification design.
@@ -64,22 +64,22 @@
 		<h2>Modelling</h2>
         <p></br>This section is separated in two different stages: 
 		<ul>
-			<li><b>Classifier:</b> For the classifier we will use data provided by Inprova from their actual clientís database, and based in that information
-			we will generate a ìpositiveî part of the training/testing dataset. From information provided from marketing/sales of potential clients that have been
+			<li><b>Classifier:</b> For the classifier we will use data provided by Inprova from their actual client‚Äôs database, and based in that information
+			we will generate a ‚Äúpositive‚Äù part of the training/testing dataset. From information provided from marketing/sales of potential clients that have been
 			contacted but had not engaged in a business relationship with Inprova (not buyers) we will generate the negative part of the training dataset. 
 			</br>With that information we will generate a Target Variable which will take Boolean values, 1 for those who are clients, and 0 for those who are not.
 				</br></br>To consult the different classifiers, go to the following:</br>
-				<a href="..\Presentation\Notebooks\Modelling\perceptron.html">Perceptron</a></br>
-				<a href="..\Presentation\Notebooks\Modelling\knn.html">K-Nearest Neighbours</a></br>
-				<a href="..\Presentation\Notebooks\Modelling\logistic.html">Logistic Regression</a></br>
-				<a href="..\Presentation\Notebooks\Modelling\svm.html">SVM</a></br> 
+				<a href="..\Notebooks\Modelling\perceptron.html">Perceptron</a></br>
+				<a href="..\Notebooks\Modelling\knn.html">K-Nearest Neighbours</a></br>
+				<a href="..\Notebooks\Modelling\logistic.html">Logistic Regression</a></br>
+				<a href="..\Notebooks\Modelling\svm.html">SVM</a></br> 
 			<li><b>Clustering: </b>For the second section of the solution, we will execute a Clustering Analysis based on the resulting dataset of those 
-			registers classified as ìBuyersî, which will help us find any hidden structure in the data of our potential clients and based in this we can 
+			registers classified as ‚ÄúBuyers‚Äù, which will help us find any hidden structure in the data of our potential clients and based in this we can 
 			separate them in groups that have a certain similarity. </br> The Clustering Analysis is an Unsupervised Learning technique for Machine
 			Learning models, which will help us to discover hidden patterns in the data by organizing the data into meaningful structures</br>
 			</br>To consult the clustering algorithms implemented, go to the following links: </br>
-				<a href="..\Presentation\Notebooks\Clustering\kmeans.html">K-means</a></br>
-				<a href="..\Presentation\Notebooks\Clustering\hmeans.html">Hierarchical Means</a></br>
+				<a href="..\Notebooks\Clustering\kmeans.html">K-means</a></br>
+				<a href="..\Notebooks\Clustering\hmeans.html">Hierarchical Means</a></br>
 		</ul>
 			
 		</p>
@@ -91,7 +91,7 @@
 		in a purchase by calculating the Accuracy, False Alarm, False Dismissal, Precision, Recall and Specificity, we will be able to assess the overall performance 
 		of our predictive model. Based on this measures and taking advantage of the iterative nature of our methodology, we will aim to maximize the overall performance 
 		of our model
-				<a href="..\Presentation\Notebooks\Evaluation\ClassifierEvaluationTable.jpg">Classifierís Evaluation Table</a></br>
+				<a href="..\Notebooks\Evaluation\ClassifierEvaluationTable.jpg">Classifier‚Äôs Evaluation Table</a></br>
 			<li><b>Cluster's evaluation:</b>The Elbow method, to estimate the optimal number of clusters k for a given task. We have to have present that during the phase
 			of choosing the number of clusters, the higher the number of clusters, the lower the cost. Therefore we used a Penalty for complexity value (Simplified BIC Penalty)
 					</br>
@@ -114,7 +114,7 @@
 			</ul></p>
       
       </div>
-	   <img src="..\Presentation\img\topology.jpg" alt="Topology" style="width:780px;height:228px;" align="middle">
+	   <img src="..\img\topology.jpg" alt="Topology" style="width:780px;height:228px;" align="middle">
     </div>
     <div id="footer">
       Created by: Victor Ortiz-Santiago</br>
