Update charset to UTF-8

--- a/dissertation/references.html
+++ b/dissertation/references.html
@@ -4,7 +4,7 @@
 <head>
   <title>Propensity to Purchase in Procurement</title>
 
-  <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
 </head>
 
@@ -36,7 +36,7 @@
         <p><ul> 
 			<li><b>Abbott, Dean. 2014. Applied predictive analytics [electronic book : principles and techniques for the professional data analyst.</b> Indianapolis, Indiana: John Wiley & Sons. </li> 
 			<li><b>AgilOne Inc. 2017. AgilOne Customer Data and Engagement Hub.</b> 16 June. Accessed June 16, 2017. http://www.agilone.com/academy/the-definitive-guide-to-predictive-analytics-models-formarketing/.</li> 
-			<li><b>Chapman, Pete, Julian Clinton, Randy Kerber, Thomas Khabaza, Thomas Reinartz, Colin Shearer, and Rüdiger Wirth. 1999-2000. CRISP-DM 1.0: Step-by-step data mining guide. CRISP-DM consortium. </b>
+			<li><b>Chapman, Pete, Julian Clinton, Randy Kerber, Thomas Khabaza, Thomas Reinartz, Colin Shearer, and RÃ¼diger Wirth. 1999-2000. CRISP-DM 1.0: Step-by-step data mining guide. CRISP-DM consortium. </b>
 			<li><b>Continuum Analytics, Inc. 2017. Anaconda Powered by Continuum Analytics.</b> Accessed June 19, 2017. https://www.continuum.io/open-data-science. </li> 
 			<li><b>Department of Computer Science, University of Liverpool. 2017. Computer Science Intranet.</b> Accessed June 26, 2017. https://sam.csc.liv.ac.uk/COMP702/2017/project/612. 
 			<li><b>Foundation, Python Software. 1990-2017. spyder 3.1.4.</b> Accessed June 20, 2017. https://pypi.python.org/pypi/spyder. </li> 
@@ -49,7 +49,7 @@
 			<li><b>Project Jupyter. 2017. The Jupyter Notebook.</b> 14 June. Accessed June 20, 2017. http://jupyter.org/. </li> 
 			<li><b>Python Software Foundation. 2001-2017. Python.</b> Accessed June 20, 2017. https://www.python.org/downloads/. </li> 
 			<li><b>Raschka, Sebastian. 2015. Python Machine Learning: Unlock deeper insights into Machine Learning with this vital guide to cutting-edge predictive analysis.</b> Brimingham, UK: Packt Publishing. </li> 
-			<li><b>Rosenbaum, Paul, and Rubin Donald. 1983. “The Central Role of the Propoensity Score in Observational Studies for Causal Effects.”</b> Biometrika 41-55. </li> 
+			<li><b>Rosenbaum, Paul, and Rubin Donald. 1983. â€œThe Central Role of the Propoensity Score in Observational Studies for Causal Effects.â€</b> Biometrika 41-55. </li> 
 			<li><b>Siegel, Eric. 2013. Predictive Analaytics, The power to predict who will click, buy, lie, or die.</b> Hoboken, N.J: Wiley. </li> 
 			<li><b>The Pandas Project. 2014. Pandas.</b> 4 June. Accessed June 20, 2017. http://pandas.pydata.org/.</li> 
 		</ul></p>      
