--- a/dissertation/analysis.html
+++ b/dissertation/analysis.html
@@ -55,7 +55,7 @@
 				</ul> 
 					To consult what have been done during the exection of the data preparation, go to the following 
 					<a href="..\dissertation\Notebooks\Data Preparation\preparation.html">link</a></br>
-					<a href="..\dissertation\Notebooks\Data Preparation\preparation.html">link</a></br>
+					
 					</br><b>Data Collection Report (Deliverable):</b> The data collection report contains the description of the data, a record of the data exploration and the 
 					final data quality report, describing everything that was done to the data during the Data Understanding and Data Preparation phases, this in 
 					compliance to the specification design.
@@ -115,7 +115,7 @@
 			</ul></p>
       
       </div>
-	   <img src="..\img\topology.jpg" alt="Topology" style="width:780px;height:228px;" align="middle">
+	   <img src="..\dissertation\img\topology.jpg" alt="Topology" style="width:780px;height:228px;" align="middle">
     </div>
     <div id="footer">
       Created by: Victor Ortiz-Santiago</br>
