--- a/dissertation/project.html
+++ b/dissertation/project.html
@@ -4,7 +4,7 @@
 <head>
   <title>Propensity to Purchase in Procurement</title>
 
-  <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
 </head>
 
