Adding Data Science Survival Kit Reference

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 	<head>Axenderst's Portfolio</head>
 	<body>
-		<a href="\dissertation\index.html">Propensity to Purchase Project</a>
+		<h1>Projects: </h1>
+		<ul>
+			<li><a href="\dissertation\index.html"> Propensity to Purchase Project</a></li>
+			<li><a href="\reto\index.html"> Data Science Survival Kit</a></li>
+			
+		</ul>
 	</body>
 </html>
